--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Recommender system for movies",
   "main": "index.js",
   "scripts": {
-    "start": "node index"
+    "start": "node index",
+    "web": "node ./web/server.js"
   },
   "bin": {
     "recommender": "./index.js"
@@ -23,6 +24,7 @@
   "dependencies": {
     "commander": "^11.1.0",
     "csv-parser": "^3.0.0",
+    "express": "^4.18.2",
     "unzipper": "^0.10.14"
   }
 }
